--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(08_philosophers C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(08_philosophers main.c)
+add_executable(08_philosophers main.c philo.h src_philo/ft_check.c src_philo/ft_read_argc.c)
