--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(08_philosophers C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(08_philosophers philo.c philo.h src_philo/ft_check.c src_philo/ft_read_args.c src_philo/ft_atoi.c src_philo/ft_process_threads.c src_philo/ft_dinner.c src_philo/ft_simulation.c src_philo/ft_time.c)
+add_executable(08_philosophers philo.c philo.h src_philo/ft_check.c src_philo/ft_read_args.c src_philo/ft_atoi.c src_philo/ft_process_threads.c src_philo/ft_dinner.c src_philo/ft_simulation.c src_philo/ft_time.c src_philo/ft_cycle.c)
